# rust-redis-sink

./: Cargo.toml  README.md
src/: aws_wrappers.rs  main.rs  redis_wrappers.rs
