[package]
name = "rust-redis-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.57.1"
aws-credential-types="0.57.1"
aws-sdk-s3 = "0.35.0"
aws-types="0.57.1"
env_logger = "0.9"
flate2 = "1.0.28"
lazy_static = "1.4.0"
log = "0.4"
once_cell = "1.18.0"
rayon = "1.5.1"
redis = { version = "0.23.3", features = ["tokio-comp", "keep-alive", "cluster"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
structopt = "0.3.23"
tokio = { version = "1.33.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "fat"
